--- a/ForwardKinematics/ForwardKinematics.vcxproj
+++ b/ForwardKinematics/ForwardKinematics.vcxproj
@@ -68,6 +68,8 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="D:\OpenGL\environment_setup_windows-master\OPENGL.props" />
+    <Import Project="D:\OpenGL\environment_setup_windows-master\NANOGUI.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
